fix for PIMS-1134 Layout > Large gap (whitespace) between header and content on all pages due to a CSS issue in Firefox
git-svn-id: https://dev.pih-emr.org/svn/repository/projects/warehouse/trunk@10637 f0ac6d2b-dfc5-4988-9158-fc266d298d87

--- a/web-app/css/footer.css
+++ b/web-app/css/footer.css
@@ -1,10 +1,6 @@
 /* Fix for footer creep 
 ----------------------------------------------------------*/
 
-#bd { 
-	margin-bottom: 50px;	/* add a little room between footer and end of content */
-}
-
 #ft {
 	/*background: #555;
 	color:#ddd;*/
